{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 100,
  "lineage": "0f8bb8ff-eedd-a250-b1bd-67cf2c80a874",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:337909779916:loadbalancer/app/spot-teacher-dev-dev-alb/b50c5d00bb2ddc84",
            "arn_suffix": "app/spot-teacher-dev-dev-alb/b50c5d00bb2ddc84",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "spot-teacher-dev-dev-alb-600786040.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:337909779916:loadbalancer/app/spot-teacher-dev-dev-alb/b50c5d00bb2ddc84",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "spot-teacher-dev-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a9f9ac29ca857185"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-095f338e8a9375760"
              },
              {
                "subnet_id": "subnet-09d0ddb289dffd8f3"
              }
            ],
            "subnets": [
              "subnet-095f338e8a9375760",
              "subnet-09d0ddb289dffd8f3"
            ],
            "tags": {
              "Name": "spot-teacher-dev-dev-alb"
            },
            "tags_all": {
              "Name": "spot-teacher-dev-dev-alb",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "vpc_id": "vpc-04c237cec64c76fe7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.alb_ingress_http",
            "module.security_groups.aws_security_group_rule.bastion_ingress_ssh",
            "module.security_groups.aws_security_group_rule.ecs_egress_to_internet",
            "module.security_groups.aws_security_group_rule.ecs_ingress_from_alb",
            "module.security_groups.aws_security_group_rule.ecs_same_sg",
            "module.security_groups.aws_security_group_rule.rds_ingress_from_bastion",
            "module.security_groups.aws_security_group_rule.rds_ingress_from_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:337909779916:listener/app/spot-teacher-dev-dev-alb/b50c5d00bb2ddc84/e0f8a58cb4a69e73",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:337909779916:targetgroup/spot-teacher-dev-dev-tg/ba5cb849cfe6c5b2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:337909779916:listener/app/spot-teacher-dev-dev-alb/b50c5d00bb2ddc84/e0f8a58cb4a69e73",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:337909779916:loadbalancer/app/spot-teacher-dev-dev-alb/b50c5d00bb2ddc84",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "spot-teacher-dev-dev-listener-80"
            },
            "tags_all": {
              "Name": "spot-teacher-dev-dev-listener-80",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.alb_ingress_http",
            "module.security_groups.aws_security_group_rule.bastion_ingress_ssh",
            "module.security_groups.aws_security_group_rule.ecs_egress_to_internet",
            "module.security_groups.aws_security_group_rule.ecs_ingress_from_alb",
            "module.security_groups.aws_security_group_rule.ecs_same_sg",
            "module.security_groups.aws_security_group_rule.rds_ingress_from_bastion",
            "module.security_groups.aws_security_group_rule.rds_ingress_from_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:337909779916:targetgroup/spot-teacher-dev-dev-tg/ba5cb849cfe6c5b2",
            "arn_suffix": "targetgroup/spot-teacher-dev-dev-tg/ba5cb849cfe6c5b2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:337909779916:targetgroup/spot-teacher-dev-dev-tg/ba5cb849cfe6c5b2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:337909779916:loadbalancer/app/spot-teacher-dev-dev-alb/b50c5d00bb2ddc84"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "spot-teacher-dev-dev-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "spot-teacher-dev-dev-tg"
            },
            "tags_all": {
              "Name": "spot-teacher-dev-dev-tg",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.alb_ingress_http",
            "module.security_groups.aws_security_group_rule.bastion_ingress_ssh",
            "module.security_groups.aws_security_group_rule.ecs_egress_to_internet",
            "module.security_groups.aws_security_group_rule.ecs_ingress_from_alb",
            "module.security_groups.aws_security_group_rule.ecs_same_sg",
            "module.security_groups.aws_security_group_rule.rds_ingress_from_bastion",
            "module.security_groups.aws_security_group_rule.rds_ingress_from_ecs"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f60083da83fb579e",
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:elastic-ip/eipalloc-0f60083da83fb579e",
            "association_id": "eipassoc-07ebabd14ab7efcb8",
            "domain": "vpc",
            "id": "eipalloc-0f60083da83fb579e",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-03c4bd0832d77c818",
            "private_dns": "ip-10-0-1-19.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.19",
            "public_dns": "ec2-54-92-17-214.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.92.17.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-nat-eip-ap-northeast-1a"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-nat-eip-ap-northeast-1a",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfe6fe1de7b385aa",
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:elastic-ip/eipalloc-0dfe6fe1de7b385aa",
            "association_id": "eipassoc-022e1b087a566bfcb",
            "domain": "vpc",
            "id": "eipalloc-0dfe6fe1de7b385aa",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0799b8148d0a87c0d",
            "private_dns": "ip-10-0-2-216.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.216",
            "public_dns": "ec2-35-74-38-226.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.38.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-nat-eip-ap-northeast-1c"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-nat-eip-ap-northeast-1c",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:internet-gateway/igw-020bb06598944664b",
            "id": "igw-020bb06598944664b",
            "owner_id": "337909779916",
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-igw"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-igw",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f60083da83fb579e",
            "association_id": "eipassoc-07ebabd14ab7efcb8",
            "connectivity_type": "public",
            "id": "nat-0f218b1aad31252e9",
            "network_interface_id": "eni-03c4bd0832d77c818",
            "private_ip": "10.0.1.19",
            "public_ip": "54.92.17.214",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09d0ddb289dffd8f3",
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-nat-gw-ap-northeast-1a"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-nat-gw-ap-northeast-1a",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfe6fe1de7b385aa",
            "association_id": "eipassoc-022e1b087a566bfcb",
            "connectivity_type": "public",
            "id": "nat-052c6160cf41c8ab9",
            "network_interface_id": "eni-0799b8148d0a87c0d",
            "private_ip": "10.0.2.216",
            "public_ip": "35.74.38.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-095f338e8a9375760",
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-nat-gw-ap-northeast-1c"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-nat-gw-ap-northeast-1c",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:route-table/rtb-0fb69f38e5d62ee1e",
            "id": "rtb-0fb69f38e5d62ee1e",
            "owner_id": "337909779916",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f218b1aad31252e9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-private-rt-ap-northeast-1a"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-private-rt-ap-northeast-1a",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:route-table/rtb-0a431557c72a522fc",
            "id": "rtb-0a431557c72a522fc",
            "owner_id": "337909779916",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-052c6160cf41c8ab9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-private-rt-ap-northeast-1c"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-private-rt-ap-northeast-1c",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:route-table/rtb-0a3ed3fb1ce17dc8a",
            "id": "rtb-0a3ed3fb1ce17dc8a",
            "owner_id": "337909779916",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020bb06598944664b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-public-rt"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-public-rt",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3dceca4c3421281",
            "route_table_id": "rtb-0fb69f38e5d62ee1e",
            "subnet_id": "subnet-09d035d397877bc02"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dda60fd0af2a64a5",
            "route_table_id": "rtb-0a431557c72a522fc",
            "subnet_id": "subnet-0496eac1ab1029046"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0097a31af0733a0",
            "route_table_id": "rtb-0a3ed3fb1ce17dc8a",
            "subnet_id": "subnet-09d0ddb289dffd8f3"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d158036d3dfb7a3",
            "route_table_id": "rtb-0a3ed3fb1ce17dc8a",
            "subnet_id": "subnet-095f338e8a9375760"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:subnet/subnet-09d035d397877bc02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d035d397877bc02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909779916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-private-subnet-ap-northeast-1a"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-private-subnet-ap-northeast-1a",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:subnet/subnet-0496eac1ab1029046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0496eac1ab1029046",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909779916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-private-subnet-ap-northeast-1c"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-private-subnet-ap-northeast-1c",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:subnet/subnet-09d0ddb289dffd8f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d0ddb289dffd8f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909779916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-public-subnet-ap-northeast-1a"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-public-subnet-ap-northeast-1a",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:subnet/subnet-095f338e8a9375760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095f338e8a9375760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909779916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-public-subnet-ap-northeast-1c"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-public-subnet-ap-northeast-1c",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:vpc/vpc-04c237cec64c76fe7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098cb8de863fe0b2c",
            "default_route_table_id": "rtb-0637335e8fb7740db",
            "default_security_group_id": "sg-0ef33418fee51b8df",
            "dhcp_options_id": "dopt-05ad6dca5a8f74457",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c237cec64c76fe7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0637335e8fb7740db",
            "owner_id": "337909779916",
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-vpc"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-vpc",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:security-group/sg-0a9f9ac29ca857185",
            "description": "Allow HTTP/HTTPS access to the ALB",
            "egress": [],
            "id": "sg-0a9f9ac29ca857185",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "spot-teacher-dev-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "337909779916",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-alb-sg"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-alb-sg",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:security-group/sg-08f5f838a8b339121",
            "description": "Allow ALB access to ECS tasks and outbound to RDS/Internet",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba9a9833f13d283d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-08f5f838a8b339121",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ingress from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9f9ac29ca857185"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow same security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "spot-teacher-dev-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "337909779916",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-ecs-sg"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-ecs-sg",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:337909779916:security-group/sg-0ba9a9833f13d283d",
            "description": "Allow access to RDS database from ECS tasks/Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba9a9833f13d283d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f5f838a8b339121"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "spot-teacher-dev-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "337909779916",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-rds-sg"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-teacher-dev-dev-rds-sg",
              "env": "dev",
              "managedBy": "terraform",
              "team": "spot-teacher-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c237cec64c76fe7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2878465517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a9f9ac29ca857185",
            "security_group_rule_id": "sgr-04a26912aa218e473",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_egress_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound to Internet",
            "from_port": 0,
            "id": "sgrule-1792518898",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08f5f838a8b339121",
            "security_group_rule_id": "sgr-0bcc241b2d2388f4a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_ingress_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ingress from ALB",
            "from_port": 8080,
            "id": "sgrule-3093679857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08f5f838a8b339121",
            "security_group_rule_id": "sgr-0c806398e89311b4f",
            "self": false,
            "source_security_group_id": "sg-0a9f9ac29ca857185",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_same_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow same security group",
            "from_port": 0,
            "id": "sgrule-3646410835",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08f5f838a8b339121",
            "security_group_rule_id": "sgr-08d95f8b70bb992f9",
            "self": false,
            "source_security_group_id": "sg-08f5f838a8b339121",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-791920530",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ba9a9833f13d283d",
            "security_group_rule_id": "sgr-0994c82e0bfdeb1d8",
            "self": false,
            "source_security_group_id": "sg-08f5f838a8b339121",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.ecs",
            "module.security_groups.aws_security_group.rds"
          ]
        }
      ]
    }
  ]
}